# rageAm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ShaderUIConfig.xml  build-vs22-standalone.bat  build-vs22-unit-tests.bat  build-vs22.bat  config.lua  main.lua  vendor.lua
.github/workflows/: ci.yml
Launcher/: main.cpp
injector/: CMakeLists.txt  main.cpp
projects/app/resources/: Resource.rc
projects/app/src/: cpp.hint  main.cpp
projects/app/src/am/: manifest.h
projects/app/src/am/asset/: factory.cpp  factory.h  gameasset.cpp  gameasset.h
projects/app/src/am/desktop/: window.cpp  window.h  window_integrated.cpp  window_integrated.h  window_standalone.cpp  window_standalone.h
projects/app/src/am/file/: driveinfo.h  file.natvis  fileutils.cpp  fileutils.h  iterator.h  path.h  pathutils.h
projects/app/src/am/integration/: gamehooks.cpp  gamehooks.h  streaminginterface.h
projects/app/src/am/string/: char.h  string.cpp  string.h  string.natvis  stringwrapper.h
projects/app/src/am/system/: asserts.cpp  asserts.h  cli.h  datamgr.h  debugger.h  dialog.h  enum.h  errordisplay.cpp  errordisplay.h  event.h  nullable.h  protect_new.cpp  protect_new.h  ptr.h  singleton.h  system.h  thread.cpp  thread.h  timer.h
projects/app/src/am/task/: undo.cpp  undo.h  worker.cpp  worker.h
projects/app/src/am/time/: datetime.cpp  datetime.h  datetime.natvis
projects/app/src/am/ui/: app.h  apps.cpp  apps.h  color_hsl.h  context.cpp  context.h  extensions.cpp  extensions.h  icons.cpp  icons.h  image.h  window.h
projects/app/src/am/xml/: doc.h  element.cpp  element.h  xmlutils.h
projects/app/src/common/: logger.cpp  logger.h  types.h
projects/app/src/game/: carrec.h
projects/app/src/helpers/: align.h  bits.h  bitset.h  com.h  compiler.h  cstr.h  flagset.h  format.h  fourcc.h  macro.h  ranges.h  resharper.h  utf8.h  win32.cpp  win32.h
projects/app/src/rage/atl/: array.h  fixedarray.h  hashstring.h  map.h  pool.h  set.h  string.h  template.natvis
projects/app/src/rage/crypto/: joaat.h
projects/app/src/rage/file/: device.h  fiutils.h  iterator.cpp  iterator.h  recurseiterator.h  stream.cpp  stream.h  watcher.h
projects/app/src/rage/framework/: pool.cpp  pool.h
projects/app/src/rage/math/: math.h  vector3.cpp  vector3.h
projects/app/src/rage/paging/: README.md  base.cpp  base.h  paging.h  place.h  ref.h  resource.cpp  resource.h  resourcechunk.h  resourceheader.h  resourceinfo.cpp  resourceinfo.h  resourcemap.h  template.natvis
projects/app/src/rage/streaming/: assetstore.h  assettypes.h  configmanager.h  streamengine.h  streaming.h  streamingmodule.h
projects/app/src/rage/system/: allocator.h  (+14 more)
projects/app/src/unit_testing/: angel_array.cpp  angel_set.cpp  angel_string.cpp  file_path.cpp  string_wrapper.cpp
projects/launcher/src/: main.cpp
rage/: Pool.h  grcTexture.h  grmShaderGroup.cpp  grmShaderGroup.h
src/: CMakeLists.txt  Component.h  ComponentMgr.cpp  ComponentMgr.h  CrashHandler.h  FileHelper.h  GameVersion.h  GtaCommon.h  Logger.cpp  Logger.h  README.MD  cpp.hint  main.cpp  main.h
src/Graphics/: GtaDirectX.h
src/ImGui/: ImGuiGta.cpp  ImGuiGta.h  imconfig_gta.h  imgui_impl_gta.cpp  imgui_impl_gta.h
src/Memory/: CMakeLists.txt  Hooking.cpp  Hooking.h
src/Platform/: GtaWindow.h
src/Rage/: CVehicleFactory.h  Pool.h  Streaming.h  atArray.h  fwFsm.h  fwHelpers.h  fwTypes.h  grmShaderGroup.cpp  hash.h  pgDictionary.h
src/Rage/Files/: fiDevice.h  fiPackfile.cpp  fiPackfile.h  fiStream.cpp  fiStream.h
src/Rage/fragments/: fwFragmentDef.h
src/Template/: atSingleton.h
src/common/: CrashHandler.h  FileHelper.h  GameVersion.h  Logger.h
src/imgui_rage/: ImGuiApp.h  ImGuiAppMgr.h  ImGuiConfigRage.h  ImGuiExtensions.h  ImGuiImplRage.cpp  ImGuiImplRage.h  ImGuiRage.cpp  ImGuiRage.h
src/imgui_rage/sys_apps/: ImGuiApp_Effects.h  ImGuiApp_Explorer.h  ImGuiApp_Log.h  ImGuiApp_MainWindow.h  ImGuiApp_MaterialEditor.h  ImGuiApp_Overlay.h  ImGuiApp_Toolbar.h
src/memory/: gmAddress.cpp  gmAddress.h  gmFunc.h  gmHelper.h  gmHook.cpp  gmHook.h  gmScannable.h  gmScanner.cpp  gmScanner.h  gmVft.h  pattern.cpp  pattern.h  unionCast.h
src/rage/: CModelInfo.h  CVehicleFactory.h  Streaming.h  TlsManager.h  Vec3V.h  atArray.h  atHashString.h  datBase.h  fiDevice.h  fiPackfile.cpp  fiPackfile.h  fiStream.cpp  fiStream.h  fragType.h  fwFsm.h  fwHelpers.h  fwModelId.h  fwTypes.h  grcFragmentProgram.h  grcProgram.h  grcTexture.h  grmShaderGroup.h  macro.h  pgDictionary.h
src/rage/file/: fiAssetManager.h  fiCollection.h
src/rage/framework/: fwRenderThreadInterface.h
src/rage/grcore/: grcEffectMgr.h
src/rage/grcore/cbuffer/: sky_system_locals.h
src/rage/grcore/texture/: D3DFormat.h  TextureUtils.h  grcTexture.h  grcTextureDX11.cpp  grcTextureDX11.h  grcTextureInfo.h  grcTexturePC.cpp  grcTexturePC.h  grcTextureReference.h  grcTextureRenderTarget.h  grcTextureVFBase.h
src/rage/math/: Vector3.h
src/rage/paging/: README.md  dat.h  datHeader.h  datHelper.h  datResource.cpp  datResource.h  datResourceChunk.h  datResourceInfo.cpp  datResourceInfo.h  datResourceMap.h  pgArray.h  pgBase.cpp  pgBase.h  pgDictionary.h  pgPtrArray.h  pgRscArray.h  place.h
src/rage/paging/compiler/: datAllocator.cpp  datAllocator.h  datCompiler.cpp  datCompiler.h  datPacker.cpp  datPacker.h  datWriter.cpp  datWriter.h  pgCompiler.h
src/rage/parsable/: CBaseSubHandlingData.h  parStructure.h
src/rage/template/: array.h  hashString.h  iterator.h  template.natvis
src/rage/zlib/: zLibCompressor.cpp  zLibCompressor.h  zLibStream.cpp  zLibStream.h
src/rage_hook/: README.MD  rageControls.h  rageFileInterface.h  rageFwTimer.h  rageGrm.h  rageHandling.h  rageHandlingHacks.h  rageScaleform.h  rageStreaming.h  rageWin32.h
src/rage_hook/file_observer/: FileObserverThread.h  FileObserverThreadInterface.h  ShaderStoreThreadInterface.h  ShaderSwapThread.h  ShaderSwapThreadInterface.h  TextureStoreThreadInterface.h  TextureSwapThreadInterface.h
src/rage_hook/grcore/: D3D.h  D3DHelper.h  ProgramTypes.h  TextureSwapThread.h  rageD3D.h  rageDX11.h  rageGrc.h  rageRender.h
(+106 files in other folders)
